--- a/package.json
+++ b/package.json
@@ -8,28 +8,40 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "format": "prettier --write ./src --plugin=prettier-plugin-astro",
-    "lint": "eslint --ext .astro,.js,.ts,.tsx ."
+    "check": "astro check && tsc --noEmit",
+    "format": "prettier --write src",
+    "format:check": "prettier --check src",
+    "lint": "eslint --ext .astro,.js,.ts,.tsx .",
+    "lint:fix": "eslint --ext .astro,.js,.ts,.tsx . --fix",
+    "prepare": "husky"
   },
   "dependencies": {
-    "@astrojs/react": "^3.1.0",
-    "@astrojs/tailwind": "^5.1.0",
-    "astro": "^4.5.8",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "reactflow": "^11.10.4",
-    "tailwindcss": "^3.4.1"
+    "@astrojs/react": "3.1.0",
+    "@astrojs/tailwind": "5.1.0",
+    "astro": "4.5.8",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "reactflow": "11.10.4",
+    "tailwindcss": "3.4.1"
   },
   "devDependencies": {
-    "@astrojs/check": "^0.5.9",
-    "@types/react": "^18.2.67",
-    "@types/react-dom": "^18.2.22",
-    "eslint": "^8.57.0",
-    "eslint-plugin-astro": "^0.32.0",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "prettier": "^3.2.5",
-    "prettier-plugin-astro": "^0.13.0",
-    "prettier-plugin-tailwindcss": "^0.5.12",
-    "typescript": "^5.4.3"
+    "@astrojs/check": "0.5.9",
+    "@astrojs/sitemap": "3.1.1",
+    "@types/react": "18.2.67",
+    "@types/react-dom": "18.2.22",
+    "@typescript-eslint/parser": "7.3.1",
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-astro": "0.32.0",
+    "eslint-plugin-jsx-a11y": "6.8.0",
+    "husky": "9.0.11",
+    "lightningcss": "1.24.1",
+    "lint-staged": "15.2.2",
+    "prettier": "3.2.5",
+    "prettier-plugin-astro": "0.13.0",
+    "prettier-plugin-astro-organize-imports": "0.4.3",
+    "prettier-plugin-tailwindcss": "0.5.12",
+    "typescript": "5.4.3",
+    "vite-plugin-pwa": "0.19.6"
   }
 }
