--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   "devDependencies": {
     "@astrojs/check": "0.5.9",
     "@astrojs/sitemap": "3.1.1",
+    "@commitlint/cli": "19.2.1",
+    "@commitlint/config-conventional": "19.1.0",
     "@types/react": "18.2.67",
     "@types/react-dom": "18.2.22",
     "@typescript-eslint/parser": "7.3.1",
