--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
     "check": "astro check && tsc --noEmit",
     "format": "prettier --write src",
     "format:check": "prettier --check src",
-    "lint": "eslint --ext .astro,.js,.ts,.tsx .",
-    "lint:fix": "eslint --ext .astro,.js,.ts,.tsx . --fix",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "prepare": "husky"
   },
   "dependencies": {
     "@astrojs/react": "3.1.0",
     "@astrojs/tailwind": "5.1.0",
+    "@nextui-org/react": "2.2.10",
     "astro": "4.5.8",
+    "framer-motion": "11.0.20",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "reactflow": "11.10.4",
@@ -29,6 +31,7 @@
     "@astrojs/sitemap": "3.1.1",
     "@commitlint/cli": "19.2.1",
     "@commitlint/config-conventional": "19.1.0",
+    "@types/eslint": "8.56.6",
     "@types/react": "18.2.67",
     "@types/react-dom": "18.2.22",
     "@typescript-eslint/parser": "7.3.1",
@@ -39,6 +42,7 @@
     "husky": "9.0.11",
     "lightningcss": "1.24.1",
     "lint-staged": "15.2.2",
+    "postcss-import": "16.1.0",
     "prettier": "3.2.5",
     "prettier-plugin-astro": "0.13.0",
     "prettier-plugin-astro-organize-imports": "0.4.3",
