--- a/package.json
+++ b/package.json
@@ -31,14 +31,16 @@
     "@astrojs/sitemap": "3.1.1",
     "@commitlint/cli": "19.2.1",
     "@commitlint/config-conventional": "19.1.0",
+    "@eslint/eslintrc": "3.0.2",
     "@types/eslint": "8.56.6",
     "@types/react": "18.2.67",
     "@types/react-dom": "18.2.22",
-    "@typescript-eslint/parser": "7.3.1",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-astro": "0.32.0",
     "eslint-plugin-jsx-a11y": "6.8.0",
+    "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-tailwindcss": "3.15.1",
     "husky": "9.0.11",
     "lightningcss": "1.24.1",
     "lint-staged": "15.2.2",
@@ -48,6 +50,7 @@
     "prettier-plugin-astro-organize-imports": "0.4.3",
     "prettier-plugin-tailwindcss": "0.5.12",
     "typescript": "5.4.3",
+    "typescript-eslint": "7.3.1",
     "vite-plugin-pwa": "0.19.6"
   }
 }
