--- a/package.json
+++ b/package.json
@@ -13,33 +13,47 @@
     "format:check": "prettier --check src",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "prepare": "husky"
+    "prepare": "husky",
+    "db:pull": "xata pull main",
+    "db:push": "xata push main",
+    "db:gen": "xata codegen",
+    "db:edit": "xata schema edit"
   },
   "dependencies": {
     "@astrojs/react": "3.1.0",
     "@astrojs/tailwind": "5.1.0",
+    "@fontsource-variable/jost": "5.0.18",
+    "@nanostores/persistent": "0.10.1",
+    "@nanostores/react": "0.7.2",
     "@nextui-org/react": "2.2.10",
-    "astro": "4.5.8",
-    "framer-motion": "11.0.20",
+    "@xata.io/client": "^0.29.3",
+    "astro": "4.5.9",
+    "framer-motion": "11.0.22",
+    "lucide-react": "0.363.0",
+    "nanostores": "0.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "reactflow": "11.10.4",
-    "tailwindcss": "3.4.1"
+    "tailwindcss": "3.4.1",
+    "usehooks-ts": "3.0.2"
   },
   "devDependencies": {
-    "@astrojs/check": "0.5.9",
+    "@astrojs/check": "0.5.10",
     "@astrojs/sitemap": "3.1.1",
     "@commitlint/cli": "19.2.1",
     "@commitlint/config-conventional": "19.1.0",
     "@eslint/eslintrc": "3.0.2",
     "@types/eslint": "8.56.6",
-    "@types/react": "18.2.67",
+    "@types/react": "18.2.70",
     "@types/react-dom": "18.2.22",
+    "@typescript-eslint/parser": "7.3.1",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-astro": "0.32.0",
+    "eslint-plugin-astro": "0.33.1",
     "eslint-plugin-jsx-a11y": "6.8.0",
     "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-react": "7.34.1",
+    "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-tailwindcss": "3.15.1",
     "husky": "9.0.11",
     "lightningcss": "1.24.1",
@@ -49,8 +63,9 @@
     "prettier-plugin-astro": "0.13.0",
     "prettier-plugin-astro-organize-imports": "0.4.3",
     "prettier-plugin-tailwindcss": "0.5.12",
+    "tailwind-merge": "2.2.2",
     "typescript": "5.4.3",
     "typescript-eslint": "7.3.1",
-    "vite-plugin-pwa": "0.19.6"
+    "vite-plugin-pwa": "0.19.7"
   }
 }
