--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
-    }
+    },
+    "verbatimModuleSyntax": true
   },
   "exclude": ["public"]
 }
