--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nanostores/persistent": "0.10.1",
     "@nanostores/react": "0.7.2",
     "@nextui-org/react": "2.2.10",
+    "@vercel/analytics": "1.2.2",
     "@xata.io/client": "0.29.3",
     "astro": "4.5.9",
     "framer-motion": "11.0.22",
