--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,16 @@
 {
   "regions": [
     "dub1"
+  ],
+  "headers": [
+    {
+      "source": "/(.*).(avif|webp|svg|png|jpg)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, stale-while-revalidate=120"
+        }
+      ]
+    }
   ]
 }
