--- a/package.json
+++ b/package.json
@@ -20,35 +20,34 @@
     "db:edit": "xata schema edit"
   },
   "dependencies": {
-    "@astrojs/react": "3.1.0",
-    "@astrojs/tailwind": "5.1.0",
-    "@astrojs/vercel": "7.4.0",
     "@fontsource-variable/jost": "5.0.18",
     "@nanostores/persistent": "0.10.1",
     "@nanostores/react": "0.7.2",
     "@nextui-org/react": "2.2.10",
-    "@vercel/analytics": "1.2.2",
     "@xata.io/client": "0.29.3",
-    "astro": "4.5.9",
+    "astro": "4.5.10",
     "framer-motion": "11.0.22",
     "lucide-react": "0.363.0",
     "nanostores": "0.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "reactflow": "11.10.4",
-    "tailwindcss": "3.4.1",
+    "tailwindcss": "3.4.2",
     "usehooks-ts": "3.0.2"
   },
   "devDependencies": {
     "@astrojs/check": "0.5.10",
-    "@astrojs/sitemap": "3.1.1",
+    "@astrojs/cloudflare": "9.2.1",
+    "@astrojs/react": "3.1.0",
+    "@astrojs/sitemap": "3.1.2",
+    "@astrojs/tailwind": "5.1.0",
     "@commitlint/cli": "19.2.1",
     "@commitlint/config-conventional": "19.1.0",
     "@eslint/eslintrc": "3.0.2",
     "@types/eslint": "8.56.6",
-    "@types/react": "18.2.70",
+    "@types/react": "18.2.73",
     "@types/react-dom": "18.2.22",
-    "@typescript-eslint/parser": "7.3.1",
+    "@typescript-eslint/parser": "7.4.0",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-astro": "0.33.1",
@@ -64,10 +63,10 @@
     "prettier": "3.2.5",
     "prettier-plugin-astro": "0.13.0",
     "prettier-plugin-astro-organize-imports": "0.4.3",
-    "prettier-plugin-tailwindcss": "0.5.12",
+    "prettier-plugin-tailwindcss": "0.5.13",
     "tailwind-merge": "2.2.2",
     "typescript": "5.4.3",
-    "typescript-eslint": "7.3.1",
+    "typescript-eslint": "7.4.0",
     "vite-plugin-pwa": "0.19.7"
   },
   "engines": {
