--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro check && astro build",
+    "prepreview": "wrangler pages dev ./dist --compatibility-flags='nodejs_compat'",
     "preview": "wrangler pages dev ./dist",
     "astro": "astro",
     "check": "astro check && tsc --noEmit",
