build: change post endpoint for patch since cloudflare post endpoints cannot access to node apis

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro check && astro build",
-    "prepreview": "wrangler pages dev ./dist --compatibility-flags='nodejs_compat'",
-    "preview": "wrangler pages dev ./dist",
+    "wrangler:prepare": "wrangler pages dev ./dist --compatibility-flags='nodejs_compat'",
+    "preview": "pnpm wrangler:prepare && wrangler pages dev ./dist",
     "astro": "astro",
     "check": "astro check && tsc --noEmit",
     "format": "prettier --write src",
