--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "devDependencies": {
     "@astrojs/check": "0.5.10",
-    "@astrojs/cloudflare": "10.0.0",
+    "@astrojs/cloudflare": "^9.0.0",
     "@astrojs/react": "3.1.0",
     "@astrojs/sitemap": "3.1.2",
     "@astrojs/tailwind": "5.1.0",
