--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "devDependencies": {
     "@astrojs/check": "0.5.10",
-    "@astrojs/cloudflare": "^9.0.0",
+    "@astrojs/cloudflare": "10.0.0",
     "@astrojs/react": "3.1.0",
     "@astrojs/sitemap": "3.1.2",
     "@astrojs/tailwind": "5.1.0",
@@ -48,6 +48,7 @@
     "@types/react": "18.2.73",
     "@types/react-dom": "18.2.23",
     "@typescript-eslint/parser": "7.4.0",
+    "@xata.io/cli": "0.15.10",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-astro": "0.33.1",
