chore: config and assets

--- a/package.json
+++ b/package.json
@@ -14,19 +14,20 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prepare": "husky",
-    "db:pull": "xata pull main",
-    "db:push": "xata push main",
+    "db:pull": "xata pull dev",
+    "db:push": "xata push dev",
     "db:gen": "xata codegen",
     "db:edit": "xata schema edit"
   },
   "dependencies": {
     "@fontsource-variable/jost": "5.0.18",
+    "@icons-pack/react-simple-icons": "9.4.0",
     "@nanostores/persistent": "0.10.1",
     "@nanostores/react": "0.7.2",
     "@nextui-org/react": "2.2.10",
     "@xata.io/client": "0.29.3",
     "astro": "4.5.12",
-    "framer-motion": "11.0.23",
+    "framer-motion": "11.0.24",
     "lucide-react": "0.363.0",
     "nanostores": "0.10.0",
     "react": "18.2.0",
@@ -37,18 +38,20 @@
   },
   "devDependencies": {
     "@astrojs/check": "0.5.10",
-    "@astrojs/cloudflare": "10.0.0",
+    "@astrojs/cloudflare": "10.0.1",
     "@astrojs/react": "3.1.0",
     "@astrojs/sitemap": "3.1.2",
     "@astrojs/tailwind": "5.1.0",
     "@commitlint/cli": "19.2.1",
     "@commitlint/config-conventional": "19.1.0",
     "@eslint/eslintrc": "3.0.2",
+    "@eslint/js": "8.57.0",
     "@types/eslint": "8.56.6",
     "@types/react": "18.2.73",
     "@types/react-dom": "18.2.23",
     "@typescript-eslint/parser": "7.4.0",
     "@xata.io/cli": "0.15.10",
+    "clsx": "2.1.0",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-astro": "0.33.1",
@@ -60,6 +63,7 @@
     "husky": "9.0.11",
     "lightningcss": "1.24.1",
     "lint-staged": "15.2.2",
+    "mini-svg-data-uri": "1.4.4",
     "postcss-import": "16.1.0",
     "prettier": "3.2.5",
     "prettier-plugin-astro": "0.13.0",
@@ -69,7 +73,7 @@
     "typescript": "5.4.3",
     "typescript-eslint": "7.4.0",
     "vite-plugin-pwa": "0.19.7",
-    "wrangler": "3.39.0"
+    "wrangler": "3.41.0"
   },
   "engines": {
     "node": "18.x"
