--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nextui-org/react": "2.2.10",
     "@xata.io/client": "0.29.3",
     "astro": "4.5.12",
+    "dagre": "0.8.5",
     "framer-motion": "11.0.24",
     "lucide-react": "0.363.0",
     "nanostores": "0.10.0",
@@ -46,8 +47,9 @@
     "@commitlint/config-conventional": "19.1.0",
     "@eslint/eslintrc": "3.0.2",
     "@eslint/js": "8.57.0",
+    "@types/dagre": "0.7.52",
     "@types/eslint": "8.56.6",
-    "@types/react": "18.2.73",
+    "@types/react": "18.2.62",
     "@types/react-dom": "18.2.23",
     "@typescript-eslint/parser": "7.4.0",
     "@xata.io/cli": "0.15.10",
