--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,5 @@
   "[astro]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "explorer.excludeGitIgnore": true,
+  "explorer.excludeGitIgnore": true
 }
