build(cloudflare): add wrangler configs

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "wrangler pages dev ./dist --compatibility-flags='nodejs_compat'",
+    "wrangler": "wrangler types",
+    "wrangler:dev": "wrangler pages dev --compatibility-flags='nodejs_compat' -- astro dev",
     "astro": "astro",
     "check": "astro check && tsc --noEmit",
     "format": "prettier --write src",
@@ -26,21 +28,22 @@
     "@nanostores/react": "0.7.2",
     "@nextui-org/react": "2.2.10",
     "@xata.io/client": "0.29.3",
-    "astro": "4.5.12",
+    "astro": "4.5.14",
     "dagre": "0.8.5",
     "framer-motion": "11.0.24",
-    "lucide-react": "0.363.0",
-    "nanostores": "0.10.0",
+    "lucide-react": "0.364.0",
+    "nanostores": "0.10.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-error-boundary": "4.0.13",
     "reactflow": "11.10.4",
     "tailwindcss": "3.4.3",
     "usehooks-ts": "3.0.2"
   },
   "devDependencies": {
     "@astrojs/check": "0.5.10",
-    "@astrojs/cloudflare": "10.0.1",
-    "@astrojs/react": "3.1.0",
+    "@astrojs/cloudflare": "10.0.2",
+    "@astrojs/react": "3.1.1",
     "@astrojs/sitemap": "3.1.2",
     "@astrojs/tailwind": "5.1.0",
     "@commitlint/cli": "19.2.1",
@@ -48,7 +51,7 @@
     "@eslint/eslintrc": "3.0.2",
     "@eslint/js": "8.57.0",
     "@types/dagre": "0.7.52",
-    "@types/eslint": "8.56.6",
+    "@types/eslint": "8.56.7",
     "@types/react": "18.2.62",
     "@types/react-dom": "18.2.23",
     "@typescript-eslint/parser": "7.4.0",
@@ -75,7 +78,7 @@
     "typescript": "5.4.3",
     "typescript-eslint": "7.4.0",
     "vite-plugin-pwa": "0.19.7",
-    "wrangler": "3.41.0"
+    "wrangler": "3.44.0"
   },
   "engines": {
     "node": "18.x"
