chore(config): remove dep deps

--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
     "build": "astro check && astro build",
     "preview": "wrangler pages dev ./dist --compatibility-flags='nodejs_compat'",
     "wrangler": "wrangler types",
-    "wrangler:dev": "wrangler pages dev --compatibility-flags='nodejs_compat' -- astro dev",
     "astro": "astro",
     "check": "astro check && tsc --noEmit",
     "format": "prettier --write src",
     "format:check": "prettier --check src",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "prepare": "husky",
+    "prepare": "husky && astro telemetry disable",
     "db:pull": "xata pull dev",
     "db:push": "xata push dev",
     "db:gen": "xata codegen",
@@ -49,7 +48,6 @@
     "@commitlint/cli": "19.2.1",
     "@commitlint/config-conventional": "19.1.0",
     "@eslint/eslintrc": "3.0.2",
-    "@eslint/js": "8.57.0",
     "@types/dagre": "0.7.52",
     "@types/eslint": "8.56.7",
     "@types/react": "18.2.62",
