--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@commitlint/cli": "19.2.1",
     "@commitlint/config-conventional": "19.1.0",
     "@eslint/eslintrc": "3.0.2",
+    "@eslint/js": "8.57.0",
     "@types/dagre": "0.7.52",
     "@types/eslint": "8.56.7",
     "@types/react": "18.2.62",
