--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "db:pull": "xata pull dev",
     "db:push": "xata push dev",
     "db:gen": "xata codegen",
-    "db:edit": "xata schema edit"
+    "db:edit": "xata schema edit",
+    "i18n:extract": "astro-i18n extract",
+    "i18n:generate:pages": "astro-i18n generate:pages --purge",
+    "i18n:generate:types": "astro-i18n generate:types",
+    "i18n:sync": "npm run i18n:generate:pages && npm run i18n:generate:types",
+    "i18n:dev": "nodemon src/i18n/**/*.json --exec \"pnpm run i18n:sync && pnpm run dev\""
   },
   "dependencies": {
     "@fontsource-variable/jost": "5.0.18",
@@ -27,7 +32,8 @@
     "@nanostores/react": "0.7.2",
     "@nextui-org/react": "2.2.10",
     "@xata.io/client": "0.29.3",
-    "astro": "4.5.14",
+    "astro": "4.5.15",
+    "astro-i18n": "2.2.4",
     "dagre": "0.8.5",
     "framer-motion": "11.0.24",
     "lucide-react": "0.364.0",
@@ -68,6 +74,7 @@
     "lightningcss": "1.24.1",
     "lint-staged": "15.2.2",
     "mini-svg-data-uri": "1.4.4",
+    "nodemon": "3.1.0",
     "postcss-import": "16.1.0",
     "prettier": "3.2.5",
     "prettier-plugin-astro": "0.13.0",
@@ -77,7 +84,7 @@
     "typescript": "5.4.3",
     "typescript-eslint": "7.4.0",
     "vite-plugin-pwa": "0.19.7",
-    "wrangler": "3.44.0"
+    "wrangler": "3.45.0"
   },
   "engines": {
     "node": "18.x"
