chore(config): update deps and lint config

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "check": "astro check && tsc --noEmit",
     "format": "prettier --write src",
     "format:check": "prettier --check src",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
+    "lint": "eslint src",
+    "lint:fix": "eslint .src --fix",
     "prepare": "husky && astro telemetry disable",
     "db:pull": "xata pull dev",
     "db:push": "xata push dev",
