--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "4.0.13",
-    "reactflow": "11.10.4",
+    "reactflow": "11.11.0",
     "tailwindcss": "3.4.3",
-    "usehooks-ts": "3.0.2"
+    "usehooks-ts": "3.1.0"
   },
   "devDependencies": {
     "@astrojs/check": "0.5.10",
@@ -60,6 +60,7 @@
     "@types/react": "18.2.62",
     "@types/react-dom": "18.2.23",
     "@typescript-eslint/parser": "7.4.0",
+    "@vite-pwa/astro": "0.3.1",
     "@xata.io/cli": "0.15.10",
     "clsx": "2.1.0",
     "eslint": "8.57.0",
@@ -83,7 +84,6 @@
     "tailwind-merge": "2.2.2",
     "typescript": "5.4.3",
     "typescript-eslint": "7.4.0",
-    "vite-plugin-pwa": "0.19.7",
     "wrangler": "3.45.0"
   },
   "engines": {
