--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "@nanostores/react": "0.7.2",
     "@nextui-org/react": "2.2.10",
     "@xata.io/client": "0.29.3",
-    "astro": "4.5.15",
+    "astro": "4.5.16",
     "astro-i18n": "2.2.4",
     "dagre": "0.8.5",
-    "framer-motion": "11.0.24",
+    "framer-motion": "11.0.25",
     "lucide-react": "0.364.0",
     "nanostores": "0.10.2",
     "react": "18.2.0",
@@ -47,7 +47,7 @@
   },
   "devDependencies": {
     "@astrojs/check": "0.5.10",
-    "@astrojs/cloudflare": "10.0.2",
+    "@astrojs/netlify": "5.2.0",
     "@astrojs/react": "3.1.1",
     "@astrojs/sitemap": "3.1.2",
     "@astrojs/tailwind": "5.1.0",
@@ -84,7 +84,7 @@
     "tailwind-merge": "2.2.2",
     "typescript": "5.4.3",
     "typescript-eslint": "7.4.0",
-    "wrangler": "3.45.0"
+    "wrangler": "3.47.1"
   },
   "engines": {
     "node": "18.x"
