--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
     "usehooks-ts": "3.1.0"
   },
   "devDependencies": {
+    "@astrojs/vercel": "7.5.2",
     "@astrojs/check": "0.5.10",
-    "@astrojs/netlify": "5.2.0",
     "@astrojs/react": "3.1.1",
     "@astrojs/sitemap": "3.1.2",
     "@astrojs/tailwind": "5.1.0",
