chore(build): remove serverless adapter since won't work with current libs, using node

--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
+    "dev:i18n": "nodemon src/i18n/**/*.json --exec \"pnpm run i18n:sync && pnpm run dev\"",
     "start": "astro dev",
     "build": "astro check && astro build",
-    "preview": "wrangler pages dev ./dist --compatibility-flags='nodejs_compat'",
+    "preview": "node --env-file=.env.development ./dist/server/entry.mjs",
     "wrangler": "wrangler types",
     "astro": "astro",
     "check": "astro check && tsc --noEmit",
@@ -22,8 +23,7 @@
     "i18n:extract": "astro-i18n extract",
     "i18n:generate:pages": "astro-i18n generate:pages --purge",
     "i18n:generate:types": "astro-i18n generate:types",
-    "i18n:sync": "npm run i18n:generate:pages && npm run i18n:generate:types",
-    "i18n:dev": "nodemon src/i18n/**/*.json --exec \"pnpm run i18n:sync && pnpm run dev\""
+    "i18n:sync": "npm run i18n:generate:pages && npm run i18n:generate:types"
   },
   "dependencies": {
     "@fontsource-variable/jost": "5.0.18",
@@ -32,22 +32,22 @@
     "@nanostores/react": "0.7.2",
     "@nextui-org/react": "2.2.10",
     "@xata.io/client": "0.29.3",
-    "astro": "4.5.15",
+    "astro": "4.5.16",
     "astro-i18n": "2.2.4",
     "dagre": "0.8.5",
-    "framer-motion": "11.0.24",
-    "lucide-react": "0.364.0",
-    "nanostores": "0.10.2",
+    "framer-motion": "11.0.25",
+    "lucide-react": "0.365.0",
+    "nanostores": "0.10.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "4.0.13",
-    "reactflow": "11.10.4",
+    "reactflow": "11.11.0",
     "tailwindcss": "3.4.3",
-    "usehooks-ts": "3.0.2"
+    "usehooks-ts": "3.1.0"
   },
   "devDependencies": {
+    "@astrojs/node": "^8.2.5",
     "@astrojs/check": "0.5.10",
-    "@astrojs/cloudflare": "10.0.2",
     "@astrojs/react": "3.1.1",
     "@astrojs/sitemap": "3.1.2",
     "@astrojs/tailwind": "5.1.0",
@@ -60,6 +60,7 @@
     "@types/react": "18.2.62",
     "@types/react-dom": "18.2.23",
     "@typescript-eslint/parser": "7.4.0",
+    "@vite-pwa/astro": "0.3.1",
     "@xata.io/cli": "0.15.10",
     "clsx": "2.1.0",
     "eslint": "8.57.0",
@@ -82,11 +83,9 @@
     "prettier-plugin-tailwindcss": "0.5.13",
     "tailwind-merge": "2.2.2",
     "typescript": "5.4.3",
-    "typescript-eslint": "7.4.0",
-    "vite-plugin-pwa": "0.19.7",
-    "wrangler": "3.45.0"
+    "typescript-eslint": "7.4.0"
   },
   "engines": {
-    "node": "18.x"
+    "node": "20.x"
   }
 }
