--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@fontsource-variable/jost": "5.0.18",
+    "@icons-pack/react-simple-icons": "9.4.0",
     "@nanostores/persistent": "0.10.1",
     "@nanostores/react": "0.7.2",
     "@nextui-org/react": "2.2.10",
@@ -45,8 +46,8 @@
     "usehooks-ts": "3.1.0"
   },
   "devDependencies": {
-    "@astrojs/node": "^8.2.5",
     "@astrojs/check": "0.5.10",
+    "@astrojs/node": "^8.2.5",
     "@astrojs/react": "3.1.1",
     "@astrojs/sitemap": "3.1.2",
     "@astrojs/tailwind": "5.1.0",
