chore(build): add vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
 {
   "version": 2,
+  "installCommand": "pnpm install",
+  "buildCommand": "pnpm build",
+  "outputDirectory": "dist",
+  "regions": ["dub1"],
   "builds": [
     {
       "src": "/dist/server/entry.mjs",
