chore(deploy): text netlify functions

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev:i18n": "nodemon src/i18n/**/*.json --exec \"pnpm run i18n:sync && pnpm run dev\"",
     "start": "astro dev",
     "build": "astro check && astro build",
-    "preview": "astro preview",
+    "preview": "netlify dev",
+    "func:inv": "netlify functions:invoke",
     "astro": "astro",
     "check": "astro check && tsc --noEmit",
     "format": "prettier --write src",
@@ -53,6 +54,7 @@
     "@commitlint/config-conventional": "19.1.0",
     "@eslint/eslintrc": "3.0.2",
     "@eslint/js": "8.57.0",
+    "@netlify/functions": "2.6.0",
     "@types/dagre": "0.7.52",
     "@types/eslint": "8.56.7",
     "@types/react": "18.2.62",
@@ -73,6 +75,7 @@
     "lightningcss": "1.24.1",
     "lint-staged": "15.2.2",
     "mini-svg-data-uri": "1.4.4",
+    "netlify-cli": "17.21.2",
     "nodemon": "3.1.0",
     "postcss-import": "16.1.0",
     "prettier": "3.2.5",
