--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev:i18n": "nodemon src/i18n/**/*.json --exec \"pnpm run i18n:sync && pnpm run dev\"",
     "start": "astro dev",
     "build": "astro check && astro build",
-    "preview": "netlify dev",
-    "func:inv": "netlify functions:invoke",
+    "preview": "astro preview",
     "astro": "astro",
     "check": "astro check && tsc --noEmit",
     "format": "prettier --write src",
@@ -26,7 +25,6 @@
     "i18n:sync": "npm run i18n:generate:pages && npm run i18n:generate:types"
   },
   "dependencies": {
-    "@astrojs/netlify": "5.2.0",
     "@fontsource-variable/jost": "5.0.18",
     "@nanostores/persistent": "0.10.1",
     "@nanostores/react": "0.7.2",
@@ -50,11 +48,11 @@
     "@astrojs/react": "3.1.1",
     "@astrojs/sitemap": "3.1.2",
     "@astrojs/tailwind": "5.1.0",
+    "@astrojs/vercel": "7.5.2",
     "@commitlint/cli": "19.2.1",
     "@commitlint/config-conventional": "19.1.0",
     "@eslint/eslintrc": "3.0.2",
     "@eslint/js": "8.57.0",
-    "@netlify/functions": "2.6.0",
     "@types/dagre": "0.7.52",
     "@types/eslint": "8.56.7",
     "@types/react": "18.2.62",
@@ -75,7 +73,6 @@
     "lightningcss": "1.24.1",
     "lint-staged": "15.2.2",
     "mini-svg-data-uri": "1.4.4",
-    "netlify-cli": "17.21.2",
     "nodemon": "3.1.0",
     "postcss-import": "16.1.0",
     "prettier": "3.2.5",
@@ -84,7 +81,8 @@
     "prettier-plugin-tailwindcss": "0.5.13",
     "tailwind-merge": "2.2.2",
     "typescript": "5.4.3",
-    "typescript-eslint": "7.4.0"
+    "typescript-eslint": "7.4.0",
+    "vercel": "33.7.0"
   },
   "engines": {
     "node": "20.x"
