--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@xata.io/client": "0.29.3",
     "astro": "4.5.16",
     "astro-i18n": "2.2.4",
+    "d3": "7.9.0",
     "dagre": "0.8.5",
     "framer-motion": "11.0.25",
     "lucide-react": "0.365.0",
@@ -55,6 +56,7 @@
     "@eslint/eslintrc": "3.0.2",
     "@eslint/js": "8.57.0",
     "@netlify/functions": "2.6.0",
+    "@types/d3": "7.4.3",
     "@types/dagre": "0.7.52",
     "@types/eslint": "8.56.7",
     "@types/react": "18.2.62",
