chore(feat): add portfolio info via astro content collections

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 dist/
 .vercel
 .wrangler
+.netlify
+.astro
 
 # generated types
 .astro/
@@ -21,6 +23,3 @@ pnpm-debug.log*
 
 # macOS-specific files
 .DS_Store
-
-.vercel
-.netlify
